update linkedin icon

--- a/dashboard.html
+++ b/dashboard.html
@@ -98,7 +98,7 @@
 
             <div class="platform linkedin flex">
               <div class="platform-name flex">
-                <img src="Assets/Linkedin.svg" alt="linkedin-icon" class="platform-icon">
+                <img src="Assets/LinkedIn.svg" alt="linkedin-icon" class="platform-icon">
                 <p>Linkedin</p>
               </div>
               <img src="Assets/Plus.svg" alt="plus-icon" class="plus-icon">
@@ -114,7 +114,7 @@
               <div class="curr-platform">
               <div class="platform linkedin flex">
                 <div class="platform-name flex">
-                  <img src="Assets/Linkedin.svg" alt="linkedin-icon" class="platform-icon">
+                  <img src="Assets/LinkedIn.svg" alt="linkedin-icon" class="platform-icon">
                   <p>Linkedin</p>
                 </div>
                 <img src="Assets/Close.svg" alt="close-icon" class="close-icon">
